build/ml/cp_parser_uci.output
   0  $accept : %entry% $end

   1  main : section

   2  section : S_PARAMETER SEP1 BEGIN env_params END
   3          | S_MODULES SEP1 BEGIN uc_objects END
   4          | S_EXPORT SEP1 BEGIN uc_objects END
   5          | S_IMPORT SEP1 BEGIN uc_objects END
   6          | S_TYPES SEP1 BEGIN uc_objects END
   7          | S_DATA SEP1 BEGIN uc_objects END
   8          | S_TEMP SEP1 BEGIN uc_objects END
   9          | S_CODE SEP1 BEGIN instructions END

  10  uc_objects : uc_object
  11             | uc_object uc_objects

  12  env_params : env_param
  13             | env_param env_params

  14  env_param : env_param_name EQ env_param_value

  15  env_param_name : VAR IDENT

  16  env_param_value : VALUE

  17  uc_object : REG name SEP1 data_type
  18            | REG name SEP1 data_type WITH params
  19            | SIG name SEP1 data_type
  20            | VAR name SEP1 data_type
  21            | VAR name SEP1 data_type IN name
  22            | VAR name SEP1 data_type IN name DOT LBRAK VALUE RBRAK
  23            | VAR name SEP1 data_type IN name WITH params
  24            | VAR name SEP1 data_type IN name DOT LBRAK VALUE RBRAK WITH params
  25            | OBJ name SEP1 data_type
  26            | OBJ name SEP1 data_type WITH params
  27            | QUE name SEP1 data_type
  28            | QUE name SEP1 data_type WITH params
  29            | CHA name SEP1 data_type
  30            | CHA name SEP1 data_type WITH params
  31            | FUNC name LPAREN data_type_list RPAREN
  32            | BLK name SEP1 data_type OF data_type
  33            | ARR name SEP1 data_type OF data_type
  34            | CON name SEP1 data_type ASS operand
  35            | VAL name SEP1 operand
  36            | MODULE name SEP1 data_type
  37            | TYPE name SEP1 LCURL symbol_list RCURL
  38            | TYPE name SEP1 LCURL struct_list RCURL
  39            | TYPE selector SEP1 LCURL method_list RCURL

  40  symbol_list : symbol_el
  41              | symbol_el symbol_list

  42  struct_list : struct_el
  43              | struct_el struct_list

  44  method_list : method_el
  45              | method_el method_list

  46  symbol_el : name

  47  struct_el : name SEP1 data_type

  48  method_el : METHOD name LPAREN data_type_list RPAREN
  49            | METHOD name LPAREN RPAREN

  50  data_type_list : data_type
  51                 | data_type SEP2 data_type_list

  52  data_type : TYPE_SPEC
  53            | TYPE_SPEC LBRAK VALUE RBRAK
  54            | REG LBRAK diml RBRAK
  55            | VAR LBRAK diml RBRAK
  56            | SIG LBRAK diml RBRAK
  57            | CELLS LBRAK VALUE RBRAK
  58            | QUE LBRAK VALUE RBRAK
  59            | CHA LBRAK VALUE RBRAK
  60            | PARAM
  61            | IDENT
  62            | IDENT DOT IDENT
  63            | data_type SEP1 PARAM

  64  diml : dim
  65       | dim SEP2 diml

  66  dim : VALUE

  67  params : param
  68         | param AND params

  69  param : param_name EQ param_value

  70  param_name : PARAM
  71             | VAR IDENT

  72  param_value : IDENT
  73              | VALUE
  74              | STRING
  75              | CHAR
  76              | TYPE_SPEC
  77              | TYPE_SPEC LBRAK VALUE RBRAK
  78              | data_type

  79  operand_list : operand
  80               | operand SEP2 operand_list

  81  operand : VALUE
  82          | VALUE SEP1 params
  83          | IDENT
  84          | IDENT SEP1 params
  85          | VAR IMMED DOT LBRAK VALUE RBRAK
  86          | VAR TEMP DOT LBRAK name RBRAK
  87          | VAR TEMP DOT LBRAK selector RBRAK
  88          | VAR IMMED DOT LBRAK VALUE RBRAK SEP1 params
  89          | VAR TEMP DOT LBRAK name RBRAK SEP1 params
  90          | VAR TEMP DOT LBRAK selector RBRAK SEP1 params
  91          | VAR ALU DOT LBRAK VALUE RBRAK
  92          | VAR ALU DOT LBRAK VALUE RBRAK SEP1 params
  93          | selector
  94          | selector SEP1 params

  95  range : VALUE TO VALUE
  96        | VALUE DOWNTO VALUE

  97  value_list : range
  98             | operand
  99             | VALUE
 100             | VALUE SEP2 value_list
 101             | operand SEP2 value_list

 102  selector : selector_list

 103  selector_type : name
 104                | LBRAK value_list RBRAK

 105  selector_list : selector_type
 106                | selector_type DOT selector_list

 107  instructions : instruction
 108               | instruction instructions

 109  instruction : NOP
 110              | label SEP1
 111              | BIND LPAREN VALUE RPAREN
 112              | JUMP LPAREN label RPAREN
 113              | FALSEJUMP LPAREN operand SEP2 label RPAREN
 114              | MOVE LPAREN operand SEP2 operand RPAREN
 115              | MOVE LPAREN operand SEP2 operand RPAREN WITH params
 116              | EXPR LPAREN operand SEP2 operand SEP2 operation SEP2 operand RPAREN
 117              | EXPR LPAREN operand SEP2 operand SEP2 operation SEP2 operand RPAREN WITH params
 118              | FUN selector LPAREN operand_list RPAREN

 119  name : IDENT

 120  label : IDENT

 121  operation : PLUS
 122            | MINUS
 123            | TIMES
 124            | DIVI
 125            | AND
 126            | OR
 127            | XOR
 128            | NOT
 129            | EQ
 130            | NEQ
 131            | LT
 132            | GT
 133            | LEQ
 134            | GEQ

 135  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (135)

	S_PARAMETER  shift 3
	S_MODULES  shift 4
	S_EXPORT  shift 5
	S_IMPORT  shift 6
	S_TYPES  shift 7
	S_DATA  shift 8
	S_CODE  shift 9
	S_TEMP  shift 10
	.  error

	main  goto 11
	section  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	section : S_PARAMETER . SEP1 BEGIN env_params END  (2)

	SEP1  shift 13
	.  error


state 4
	section : S_MODULES . SEP1 BEGIN uc_objects END  (3)

	SEP1  shift 14
	.  error


state 5
	section : S_EXPORT . SEP1 BEGIN uc_objects END  (4)

	SEP1  shift 15
	.  error


state 6
	section : S_IMPORT . SEP1 BEGIN uc_objects END  (5)

	SEP1  shift 16
	.  error


state 7
	section : S_TYPES . SEP1 BEGIN uc_objects END  (6)

	SEP1  shift 17
	.  error


state 8
	section : S_DATA . SEP1 BEGIN uc_objects END  (7)

	SEP1  shift 18
	.  error


state 9
	section : S_CODE . SEP1 BEGIN instructions END  (9)

	SEP1  shift 19
	.  error


state 10
	section : S_TEMP . SEP1 BEGIN uc_objects END  (8)

	SEP1  shift 20
	.  error


state 11
	%entry% : '\001' main .  (135)

	.  reduce 135


state 12
	main : section .  (1)

	.  reduce 1


state 13
	section : S_PARAMETER SEP1 . BEGIN env_params END  (2)

	BEGIN  shift 21
	.  error


state 14
	section : S_MODULES SEP1 . BEGIN uc_objects END  (3)

	BEGIN  shift 22
	.  error


state 15
	section : S_EXPORT SEP1 . BEGIN uc_objects END  (4)

	BEGIN  shift 23
	.  error


state 16
	section : S_IMPORT SEP1 . BEGIN uc_objects END  (5)

	BEGIN  shift 24
	.  error


state 17
	section : S_TYPES SEP1 . BEGIN uc_objects END  (6)

	BEGIN  shift 25
	.  error


state 18
	section : S_DATA SEP1 . BEGIN uc_objects END  (7)

	BEGIN  shift 26
	.  error


state 19
	section : S_CODE SEP1 . BEGIN instructions END  (9)

	BEGIN  shift 27
	.  error


state 20
	section : S_TEMP SEP1 . BEGIN uc_objects END  (8)

	BEGIN  shift 28
	.  error


state 21
	section : S_PARAMETER SEP1 BEGIN . env_params END  (2)

	VAR  shift 29
	.  error

	env_params  goto 30
	env_param  goto 31
	env_param_name  goto 32


state 22
	section : S_MODULES SEP1 BEGIN . uc_objects END  (3)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 46
	uc_object  goto 47


state 23
	section : S_EXPORT SEP1 BEGIN . uc_objects END  (4)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 48
	uc_object  goto 47


state 24
	section : S_IMPORT SEP1 BEGIN . uc_objects END  (5)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 49
	uc_object  goto 47


state 25
	section : S_TYPES SEP1 BEGIN . uc_objects END  (6)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 50
	uc_object  goto 47


state 26
	section : S_DATA SEP1 BEGIN . uc_objects END  (7)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 51
	uc_object  goto 47


state 27
	section : S_CODE SEP1 BEGIN . instructions END  (9)

	IDENT  shift 52
	MOVE  shift 53
	EXPR  shift 54
	FUN  shift 55
	BIND  shift 56
	JUMP  shift 57
	FALSEJUMP  shift 58
	NOP  shift 59
	.  error

	instructions  goto 60
	instruction  goto 61
	label  goto 62


state 28
	section : S_TEMP SEP1 BEGIN . uc_objects END  (8)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	.  error

	uc_objects  goto 63
	uc_object  goto 47


state 29
	env_param_name : VAR . IDENT  (15)

	IDENT  shift 64
	.  error


state 30
	section : S_PARAMETER SEP1 BEGIN env_params . END  (2)

	END  shift 65
	.  error


state 31
	env_params : env_param .  (12)
	env_params : env_param . env_params  (13)

	VAR  shift 29
	END  reduce 12

	env_params  goto 66
	env_param  goto 31
	env_param_name  goto 32


state 32
	env_param : env_param_name . EQ env_param_value  (14)

	EQ  shift 67
	.  error


state 33
	uc_object : VAR . name SEP1 data_type  (20)
	uc_object : VAR . name SEP1 data_type IN name  (21)
	uc_object : VAR . name SEP1 data_type IN name DOT LBRAK VALUE RBRAK  (22)
	uc_object : VAR . name SEP1 data_type IN name WITH params  (23)
	uc_object : VAR . name SEP1 data_type IN name DOT LBRAK VALUE RBRAK WITH params  (24)

	IDENT  shift 68
	.  error

	name  goto 69


state 34
	uc_object : REG . name SEP1 data_type  (17)
	uc_object : REG . name SEP1 data_type WITH params  (18)

	IDENT  shift 68
	.  error

	name  goto 70


state 35
	uc_object : SIG . name SEP1 data_type  (19)

	IDENT  shift 68
	.  error

	name  goto 71


state 36
	uc_object : OBJ . name SEP1 data_type  (25)
	uc_object : OBJ . name SEP1 data_type WITH params  (26)

	IDENT  shift 68
	.  error

	name  goto 72


state 37
	uc_object : QUE . name SEP1 data_type  (27)
	uc_object : QUE . name SEP1 data_type WITH params  (28)

	IDENT  shift 68
	.  error

	name  goto 73


state 38
	uc_object : CHA . name SEP1 data_type  (29)
	uc_object : CHA . name SEP1 data_type WITH params  (30)

	IDENT  shift 68
	.  error

	name  goto 74


state 39
	uc_object : BLK . name SEP1 data_type OF data_type  (32)

	IDENT  shift 68
	.  error

	name  goto 75


state 40
	uc_object : FUNC . name LPAREN data_type_list RPAREN  (31)

	IDENT  shift 68
	.  error

	name  goto 76


state 41
	uc_object : CON . name SEP1 data_type ASS operand  (34)

	IDENT  shift 68
	.  error

	name  goto 77


state 42
	uc_object : VAL . name SEP1 operand  (35)

	IDENT  shift 68
	.  error

	name  goto 78


state 43
	uc_object : ARR . name SEP1 data_type OF data_type  (33)

	IDENT  shift 68
	.  error

	name  goto 79


state 44
	uc_object : MODULE . name SEP1 data_type  (36)

	IDENT  shift 68
	.  error

	name  goto 80


state 45
	uc_object : TYPE . name SEP1 LCURL symbol_list RCURL  (37)
	uc_object : TYPE . name SEP1 LCURL struct_list RCURL  (38)
	uc_object : TYPE . selector SEP1 LCURL method_list RCURL  (39)

	IDENT  shift 68
	LBRAK  shift 81
	.  error

	name  goto 82
	selector  goto 83
	selector_list  goto 84
	selector_type  goto 85


state 46
	section : S_MODULES SEP1 BEGIN uc_objects . END  (3)

	END  shift 86
	.  error


state 47
	uc_objects : uc_object .  (10)
	uc_objects : uc_object . uc_objects  (11)

	VAR  shift 33
	REG  shift 34
	SIG  shift 35
	OBJ  shift 36
	QUE  shift 37
	CHA  shift 38
	BLK  shift 39
	FUNC  shift 40
	CON  shift 41
	VAL  shift 42
	ARR  shift 43
	MODULE  shift 44
	TYPE  shift 45
	END  reduce 10

	uc_objects  goto 87
	uc_object  goto 47


state 48
	section : S_EXPORT SEP1 BEGIN uc_objects . END  (4)

	END  shift 88
	.  error


state 49
	section : S_IMPORT SEP1 BEGIN uc_objects . END  (5)

	END  shift 89
	.  error


state 50
	section : S_TYPES SEP1 BEGIN uc_objects . END  (6)

	END  shift 90
	.  error


state 51
	section : S_DATA SEP1 BEGIN uc_objects . END  (7)

	END  shift 91
	.  error


state 52
	label : IDENT .  (120)

	.  reduce 120


state 53
	instruction : MOVE . LPAREN operand SEP2 operand RPAREN  (114)
	instruction : MOVE . LPAREN operand SEP2 operand RPAREN WITH params  (115)

	LPAREN  shift 92
	.  error


state 54
	instruction : EXPR . LPAREN operand SEP2 operand SEP2 operation SEP2 operand RPAREN  (116)
	instruction : EXPR . LPAREN operand SEP2 operand SEP2 operation SEP2 operand RPAREN WITH params  (117)

	LPAREN  shift 93
	.  error


state 55
	instruction : FUN . selector LPAREN operand_list RPAREN  (118)

	IDENT  shift 68
	LBRAK  shift 81
	.  error

	name  goto 94
	selector  goto 95
	selector_list  goto 84
	selector_type  goto 85


state 56
	instruction : BIND . LPAREN VALUE RPAREN  (111)

	LPAREN  shift 96
	.  error


state 57
	instruction : JUMP . LPAREN label RPAREN  (112)

	LPAREN  shift 97
	.  error


state 58
	instruction : FALSEJUMP . LPAREN operand SEP2 label RPAREN  (113)

	LPAREN  shift 98
	.  error


state 59
	instruction : NOP .  (109)

	.  reduce 109


state 60
	section : S_CODE SEP1 BEGIN instructions . END  (9)

	END  shift 99
	.  error


state 61
	instructions : instruction .  (107)
	instructions : instruction . instructions  (108)

	IDENT  shift 52
	MOVE  shift 53
	EXPR  shift 54
	FUN  shift 55
	BIND  shift 56
	JUMP  shift 57
	FALSEJUMP  shift 58
	NOP  shift 59
	END  reduce 107

	instructions  goto 100
	instruction  goto 61
	label  goto 62


state 62
	instruction : label . SEP1  (110)

	SEP1  shift 101
	.  error


state 63
	section : S_TEMP SEP1 BEGIN uc_objects . END  (8)

	END  shift 102
	.  error


state 64
	env_param_name : VAR IDENT .  (15)

	.  reduce 15


state 65
	section : S_PARAMETER SEP1 BEGIN env_params END .  (2)

	.  reduce 2


state 66
	env_params : env_param env_params .  (13)

	.  reduce 13


state 67
	env_param : env_param_name EQ . env_param_value  (14)

	VALUE  shift 103
	.  error

	env_param_value  goto 104


state 68
	name : IDENT .  (119)

	.  reduce 119

